--- a/Martify/Views/ProductDetail.xaml
+++ b/Martify/Views/ProductDetail.xaml
@@ -1,17 +1,17 @@
 ﻿<Window x:Class="Martify.Views.ProductDetail"
-xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-xmlns:cv="clr-namespace:Martify.Converters"
-Title="Chi tiết sản phẩm"
-Height="580"
-Width="400"
-WindowStartupLocation="CenterScreen"
-ResizeMode="NoResize"
-WindowStyle="None"
-AllowsTransparency="True"
-Background="Transparent"
-FontFamily="{DynamicResource MaterialDesignFont}">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:cv="clr-namespace:Martify.Converters"
+        Title="Chi tiết sản phẩm"
+        Height="580"
+        Width="400"
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Background="Transparent"
+        FontFamily="{DynamicResource MaterialDesignFont}">
 
     <Window.Resources>
         <cv:ImagePathConverter x:Key="ImgConverter"/>
@@ -76,7 +76,6 @@ FontFamily="{DynamicResource MaterialDesignFont}">
                 </Border.Background>
 
                 <Grid>
-                    <!-- Close button giả (nếu cần xử lý sự kiện trong code-behind) -->
                     <Button HorizontalAlignment="Right" VerticalAlignment="Top" 
                         Style="{StaticResource MaterialDesignIconButton}"
                         Foreground="White" Margin="10" Click="CancelButton_Click"
@@ -87,19 +86,19 @@ FontFamily="{DynamicResource MaterialDesignFont}">
 
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                         <!-- Avatar / Product Image với viền trắng -->
-                        <Border Width="120" Height="120" CornerRadius="15" 
+                        <Border Width="120" Height="120" CornerRadius="15" Panel.ZIndex="2"
                             BorderBrush="White" BorderThickness="3" 
-                            Background="#F5F5F5">
+                            Background="White">
                             <Border.Effect>
                                 <DropShadowEffect BlurRadius="10" Opacity="0.3" ShadowDepth="3"/>
                             </Border.Effect>
-                            <Rectangle Cursor="Hand" ToolTip="Thay đổi ảnh sản phẩm">
+                            <Rectangle Cursor="Hand" ToolTip="Thay đổi ảnh sản phẩm" Margin="3">
                                 <Rectangle.InputBindings>
                                     <MouseBinding MouseAction="LeftClick" Command="{Binding SelectImageCommand}"/>
                                 </Rectangle.InputBindings>
                                 <Rectangle.Fill>
                                     <ImageBrush ImageSource="{Binding EditImagePath, Converter={StaticResource ImgConverter}, TargetNullValue={StaticResource DefaultProduct}, FallbackValue={StaticResource DefaultProduct}}" 
-                                            Stretch="UniformToFill"/>
+                                            Stretch="Uniform"/>
                                 </Rectangle.Fill>
                             </Rectangle>
                         </Border>
