--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -40,24 +40,26 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" 
+                  Grid.ColumnSpan="2" 
+                  Panel.ZIndex="9999" 
+                  x:Name="WebViewContainer">
 
-                <Grid x:Name="WebViewContainer">
-                    <wv2:WebView2 x:Name="webView" 
-                                  DefaultBackgroundColor="Transparent"
-                                  Height="400"
-                                  Margin="20"/>
-                </Grid>
+                <wv2:WebView2 x:Name="webView" 
+                              DefaultBackgroundColor="Transparent"
+                              Height="400"
+                              Margin="20"/>
+            </Grid>
 
-                <ContentControl Content="{Binding Status}"
+            <ContentControl Content="{Binding Status}"
                                 IsTabStop="False"
                                 Panel.ZIndex="999"
                                 VerticalAlignment="Bottom"
                                 HorizontalAlignment="Center"
                                 Margin="0,0,0,55"/>
-            </Grid>
 
-            <Grid Grid.Column="1">
+
+            <Grid Grid.Column="1" x:Name="RightSidePanel" Opacity="0">
                 <Grid VerticalAlignment="Center"
                       HorizontalAlignment="Center"
                       Height="150"
