--- a/Martify/WebAssets/YetiAnimatedLogin/style.css
+++ b/Martify/WebAssets/YetiAnimatedLogin/style.css
@@ -97,7 +97,9 @@ form {
 		font-family: inherit;
 	}
 
-	form input[type='email'], form input[type="text"], form input[type='password'] {
+	form input[type='email'],
+	form input[type="text"],
+	form input[type='password'] {
 		display: block;
 		margin: 0;
 		padding: 0 1em 0;
@@ -119,13 +121,16 @@ form {
 		user-select: text;
 	}
 
-		form input[type='email']:focus, form input[type="text"]:focus, form input[type='password']:focus {
+		form input[type='email']:focus,
+		form input[type="text"]:focus,
+		form input[type='password']:focus {
 			outline: none;
 			box-shadow: 0px 2px 10px rgba(0, 0, 0, .1);
 			border: solid 2px #4eb8dd;
 		}
 
-	form input[type='email'], form input[type="text"] {
+	form input[type='email'],
+	form input[type="text"] {
 		padding: 14px 1em 0px;
 	}
 
@@ -147,7 +152,8 @@ form {
 		transition: background-color 0.2s ease-out;
 	}
 
-		form button:hover, form button:active {
+		form button:hover,
+		form button:active {
 			background-color: #217093;
 		}
 
@@ -279,7 +285,7 @@ input[type="password"]::-ms-clear {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #ffffff;
+	background-color: transparent;
 	z-index: 9999;
 	display: flex;
 	justify-content: center;
